@@ -1,6 +1,26 @@
 # evolution/acinclude.m4
 # shared configure.in hacks between Evolution and Connector
 
+# EVO_PURIFY_SUPPORT
+# Add --enable-purify. If the user turns it on, subst PURIFY and set
+# the automake conditional ENABLE_PURIFY
+AC_DEFUN(EVO_PURIFY_SUPPORT, [
+	AC_ARG_ENABLE(purify, 
+	[  --enable-purify=[no/yes]      Enable support for building executables with Purify.],,enable_purify=no)
+	AC_PATH_PROG(PURIFY, purify, impure)
+	AC_ARG_WITH(purify-options, [  --with-purify-options=OPTIONS      Options passed to the purify command line (defaults to PURIFYOPTIONS variable).])
+	if test "x$with_purify_options" = "xno"; then
+		with_purify_options="-always-use-cache-dir=yes -cache-dir=/gnome/lib/purify"
+	fi
+	if test "x$PURIFYOPTIONS" = "x"; then
+		PURIFYOPTIONS=$with_purify_options
+	fi
+	AC_SUBST(PURIFY)
+	AM_CONDITIONAL(ENABLE_PURIFY, test "x$enable_purify" = "xyes" -a "x$PURIFY" != "ximpure")
+	PURIFY="$PURIFY $PURIFYOPTIONS"
+])
+
+
 # EVO_LDAP_CHECK(default)
 # Add --with-openldap and --with-static-ldap options. --with-openldap
 # defaults to the given value if not specified. If LDAP support is
@@ -33,9 +53,9 @@ AC_DEFUN(EVO_LDAP_CHECK, [
 		case $with_static_ldap in
 		no|"")
 			if test -f $with_openldap/lib/libldap.la; then
-				with_static_ldap=yes
-			else
 				with_static_ldap=no
+			else
+				with_static_ldap=yes
 			fi
 			;;
 		*)
@@ -64,13 +84,6 @@ AC_DEFUN(EVO_LDAP_CHECK, [
 		AC_CHECK_LIB(lber, ber_get_tag, [
 			if test "$with_static_ldap" = "yes"; then
 				LDAP_LIBS="$with_openldap/lib/liblber.a $LDAP_LIBS"
-
-				# libldap might depend on OpenSSL... We need to pull
-				# in the dependency libs explicitly here since we're
-				# not using libtool for the configure test.
-				if test -f $with_openldap/lib/libldap.la; then
-					LDAP_LIBS="`. $with_openldap/lib/libldap.la; echo $dependency_libs` $LDAP_LIBS"
-				fi
 			else
 				LDAP_LIBS="-llber $LDAP_LIBS"
 			fi
